# SPECULA

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  pythonpackage.yml  pythonpackage_full.yml  (+1 more)
docs/: base_classes.rst  conf.py  data_objects.rst  index.rst  installation.rst  requirements.txt  running_simulations.rst  simul_diagrams.rst  simulation_basics.rst  simulation_parameters.rst
specula/: __init__.py  base_data_obj.py  base_processing_obj.py  base_time_obj.py  base_value.py  calib_manager.py  connections.py  field_analyser.py  loop_control.py  simul.py
test/: params_atmo_test.yml  specula_testlib.py  test_app_coronagraph.py  test_app_coronograph.py  test_atmo_evolution.py  test_atmo_evolution_up_down.py  test_atmo_infinite_evolution.py  test_atmo_infinite_evolution_up_down.py  test_atmo_propagation.py  test_atmo_random_phase.py  test_base_data_obj.py  test_base_inserter.py  test_base_operation.py  test_base_processing_obj.py  test_base_slicer.py  test_base_time_obj.py  test_base_value.py  test_calc_phasescreen.py  test_calib_manager.py  test_ccd.py  test_ciao_ciao_sensor.py  test_compute_ifs_covmat.py  test_compute_zonal_ifunc.py  test_connections.py  test_convolution_kernel.py  test_cov_elong.py  test_curvature_sensor.py  test_data_objects.py  test_data_source.py  test_data_store.py  test_demodulator.py  test_diagram.py  test_display.py  test_display_server.py  test_distributed_sh.py  test_dm.py  test_double_roof_slopec.py  test_electric_field.py  test_elt_m1_ifunc.py  test_ext_source_pyr.py  (+74 more)
(+223 files in other folders)
